Fix: Footer style on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -257,9 +257,13 @@ p a {
 .order-2 {
   order: 3;
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
   .order-3 {
     order: 1;
+  }
+
+  footer {
+    background: none;
   }
 }
 
